// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenovationCard Component Snapshots hauria de coincidir amb el snapshot en mode usuari 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 18,
      "elevation": 5,
      "marginBottom": 16,
      "paddingHorizontal": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
        "paddingBottom": 8,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 12,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#111827",
            "fontFamily": "Arimo",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
      >
        Refugi de Colomers
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 4,
          }
        }
      >
        <CalendarIcon
          height={16}
          style={
            {
              "fontSize": 14,
              "marginRight": 6,
            }
          }
          width={16}
        />
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "fontSize": 13,
            }
          }
        >
          Val d'Aran
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 4,
          }
        }
      >
        <CalendarIcon
          height={16}
          style={
            {
              "fontSize": 14,
              "marginRight": 6,
            }
          }
          width={16}
        />
        <Text
          style={
            {
              "color": "#6B7280",
              "fontSize": 13,
            }
          }
        >
          15/07/2025 - 20/07/2025
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "borderRadius": 7,
          "height": 96,
          "marginLeft": 12,
          "overflow": "hidden",
          "width": 96,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://example.com/image.jpg",
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
        "paddingBottom": 24,
        "paddingTop": 0,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "lineHeight": 20,
          "marginBottom": 16,
          "marginRight": 48,
          "marginTop": 16,
        }
      }
    >
      Renovació del sostre i millora de les instal·lacions
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 20,
          "opacity": 1,
        }
      }
    >
      <CalendarIcon
        height={16}
        style={
          {
            "fontSize": 16,
            "marginRight": 8,
          }
        }
        width={16}
      />
      <Text
        style={
          {
            "color": "#16A34A",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
      >
        renovations.join_whatapp_link
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "column",
          "gap": 10,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#D1D5DB",
              "borderRadius": 8,
              "borderWidth": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#030303ff",
                "fontFamily": "Arimo",
                "fontSize": 13,
                "fontWeight": "600",
              }
            }
          >
            refuge.actions.viewOnMap
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#F3F4F6",
              "borderRadius": 8,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#030303ff",
                "fontFamily": "Arimo",
                "fontSize": 13,
                "fontWeight": "600",
              }
            }
          >
            + 
            renovations.moreInfo
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`RenovationCard Component Snapshots hauria de coincidir amb el snapshot en mode visitant 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 18,
      "elevation": 5,
      "marginBottom": 16,
      "paddingHorizontal": 4,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
        "paddingBottom": 8,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "paddingRight": 12,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#111827",
            "fontFamily": "Arimo",
            "fontSize": 16,
            "fontWeight": "600",
            "marginBottom": 8,
          }
        }
      >
        Refugi de Colomers
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 4,
          }
        }
      >
        <CalendarIcon
          height={16}
          style={
            {
              "fontSize": 14,
              "marginRight": 6,
            }
          }
          width={16}
        />
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": "#6B7280",
              "fontSize": 13,
            }
          }
        >
          Val d'Aran
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginBottom": 4,
          }
        }
      >
        <CalendarIcon
          height={16}
          style={
            {
              "fontSize": 14,
              "marginRight": 6,
            }
          }
          width={16}
        />
        <Text
          style={
            {
              "color": "#6B7280",
              "fontSize": 13,
            }
          }
        >
          15/07/2025 - 20/07/2025
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "borderRadius": 7,
          "height": 96,
          "marginLeft": 12,
          "overflow": "hidden",
          "width": 96,
        }
      }
    >
      <Image
        resizeMode="cover"
        source={
          {
            "uri": "https://example.com/image.jpg",
          }
        }
        style={
          {
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
        "paddingBottom": 24,
        "paddingTop": 0,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        {
          "color": "#6B7280",
          "fontSize": 13,
          "lineHeight": 20,
          "marginBottom": 16,
          "marginRight": 48,
          "marginTop": 16,
        }
      }
    >
      Renovació del sostre i millora de les instal·lacions
    </Text>
    <View
      style={
        {
          "flexDirection": "column",
          "gap": 10,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#D1D5DB",
              "borderRadius": 8,
              "borderWidth": 1,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#030303ff",
                "fontFamily": "Arimo",
                "fontSize": 13,
                "fontWeight": "600",
              }
            }
          >
            refuge.actions.viewOnMap
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#F3F4F6",
              "borderRadius": 8,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#030303ff",
                "fontFamily": "Arimo",
                "fontSize": 13,
                "fontWeight": "600",
              }
            }
          >
            + 
            renovations.moreInfo
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 8,
                "flex": 1,
                "justifyContent": "center",
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              },
              {
                "borderRadius": 8,
              },
            ]
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontFamily": "Arimo",
                "fontSize": 13,
                "fontWeight": "600",
              }
            }
          >
            renovations.join
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
